aggiunto gioco dadi

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <main>
     <div class="container-fluid p-5">
-        <div class="row">
+        <div class="row text-center">
             <h1 class="text-center">Benvenuto</h1>
             <div class="col-12">
             <div>
@@ -30,12 +30,32 @@
                 <input id="email-address" type="email">
             </div>
         <div class="mt-3">
-            <button class="bg-primary text-white " id="login-btn">Entra!</button>
+            <button class=" btn bg-primary text-white mb-5 " id="login-btn">Entra!</button>
         </div>
         <div>
-            <p id="welcomePass" class="mt-3 text-dark">ciccio</p>
+            <p id="welcomePass" class="text-dark"></p>
 
         </div>
+        <section>
+            <div class="row text-center">
+                <h1 class="text-center">Gioca a dadi con il computer</h1>
+                <div class="col-12">
+                    <p class="mb-3">Clicca sul pulsante per lanciare i dadi</p>
+                    <button class="btn bg-primary text-white mb-3 px-5" id="play-btn">Gioca!</button>
+                </div>
+                <div>
+                    <h5>Human Player</h5>
+                    <p id="player-one"></p>
+                </div>
+                <div>
+                    <h5>A.I.</h5>
+                    <p id="player-pc"></p>
+                </div>
+                <div>
+                    <p id="result"></p>
+                </div>
+            </div>
+        </section>
     </div>
 </main>
 
