--- a/index.html
+++ b/index.html
@@ -4,62 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Montserrat google font -->
+<!-- Montserrat google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
-
-    <!-- Font-Awesome cdn -->
+<!-- Font-Awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
-
-    <!-- Bootstrap 5.1 -->
+<!-- Bootstrap 5.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- Custom style -->
+<!-- Custom style -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Mail Access - Dadi</title>
+    <title>Ingresso con e-mail - Dadi</title>
 </head>
 <body>
 <main>
-    <div class="container-fluid p-5">
+    <section class="container-fluid p-5">
         <div class="row text-center">
-            <h1 class="text-center">Benvenuto</h1>
             <div class="col-12">
-            <div>
-                <p class="mb-">inserisci la tua email e clicca sul pulsante per accedere</p>
-                <input id="email-address" type="email">
+                <h1 class="text-center">Benvenuto/a</h1>
+                <div>
+                    <p>inserisci la tua email e clicca sul pulsante per accedere</p>
+                    <input class="input-lg col-4" id="email-address" type="email">
+                </div>
+                <div class="mt-3">
+                    <button class="btn bg-primary text-white mb-5" id="login-btn">Entra!</button>
+                </div>
+                <div>
+                    <p id="welcomePass" class="text-warning fw-bold"></p>
+                </div>
             </div>
-        <div class="mt-3">
-            <button class=" btn bg-primary text-white mb-5 " id="login-btn">Entra!</button>
         </div>
-        <div>
-            <p id="welcomePass" class="text-dark"></p>
-
-        </div>
-        <section>
+        <section class="p-5">
             <div class="row text-center">
-                <h1 class="text-center">Gioca a dadi con il computer</h1>
                 <div class="col-12">
+                    <h1 class="text-center pt-5">Gioca a dadi con il computer</h1>
                     <p class="mb-3">Clicca sul pulsante per lanciare i dadi</p>
                     <button class="btn bg-primary text-white mb-3 px-5" id="play-btn">Gioca!</button>
                 </div>
                 <div>
                     <h5>Human Player</h5>
-                    <p id="player-one"></p>
+                    <p class= "fs-3 fw-bold" id="player-one"></p>
                 </div>
                 <div>
-                    <h5>A.I.</h5>
-                    <p id="player-pc"></p>
+                    <h5>HAL 9000</h5>
+                    <p class= "fs-3 fw-bold" id="player-pc"></p>
                 </div>
                 <div>
-                    <p id="result"></p>
+                    <p class= "fs-3 fw-bold text-warning"id="result"></p>
                 </div>
             </div>
         </section>
-    </div>
+    </section>>
 </main>
-
-
-    <script type="text/javascript" src="js/main.js"></script>    
+<script type="text/javascript" src="js/main.js"></script>    
 </body>
 </html>
